--- a/index.html
+++ b/index.html
@@ -7,33 +7,79 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-  <link rel="stylesheet" href="css/brunch_css.css?ver=1">
+  <link rel="stylesheet" href="css/brunch_css.css">
   <link rel="shortcut icon" href="icon/brunch.ico" type="image/x-icon">
   <link rel="icon" href="icon/brunch.ico" type="image/x-icon">
   <title>글이 작품이 되는 공간, 브런치</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+    crossorigin="anonymous"></script>
 </head>
 
 <body>
   <div id="body_wrap">
     <header id="header">
-      <!-- 왼쪽 상단 -->
-      <div class="head_left">
-        <!-- 햄버거 메뉴 -->
-        <div class="bar">
-          <img src="icon/bar.svg" alt="bar" height="20" width="27">
-        </div>
-        <!-- 로고 -->
-        <h1> <img src="imgs/logo.png" height="30" alt="no image"> </h1>
-      </div>
-      <!-- 오른쪽 상단 -->
-      <div class="head_right">
-        <span>시작하기</span>
-        <div class="search">
-          <div style="font-size: 20px; color: rgb(53, 53, 53);">
-            <img src="icon/search.svg" alt="search" height="22" width="22">
+      <nav class="navbar bg-body-tertiary fixed-top">
+        <div class="container-fluid">
+          <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
+            aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar"
+            aria-labelledby="offcanvasNavbarLabel">
+            <div class="offcanvas-header">
+              <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Offcanvas</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+            </div>
+            <div class="offcanvas-body">
+              <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Link</a>
+                </li>
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                    aria-expanded="false">
+                    Dropdown
+                  </a>
+                  <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="#">Action</a></li>
+                    <li><a class="dropdown-item" href="#">Another action</a></li>
+                    <li>
+                      <hr class="dropdown-divider">
+                    </li>
+                    <li><a class="dropdown-item" href="#">Something else here</a></li>
+                  </ul>
+                </li>
+              </ul>
+              <form class="d-flex mt-3" role="search">
+                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success" type="submit">Search</button>
+              </form>
+            </div>
+          </div>
+          <a class="navbar-brand" href="#">Offcanvas navbar</a>
+          <div class="head_right">
+            <span>시작하기</span>
+            <div class="search">
+              <div style="font-size: 20px; color: rgb(53, 53, 53);">
+                <img src="icon/search.svg" alt="search" height="22" width="22">
+              </div>
+            </div>
           </div>
         </div>
-      </div>
+      </nav>
+      <!-- <div class="head_left">
+          <div class="bar">
+            <img src="icon/bar.svg" alt="bar" height="20" width="27">
+          </div>
+          <h1> <img src="imgs/logo.png" height="30" alt="no image"> </h1>
+        </div>
+         -->
     </header>
 
     <div class="fake_header"></div>
@@ -58,7 +104,7 @@
           <div class="slideimgs">
 
             <div class="slide_bigbox bigbox1">
-              <div class="slide_left">
+              <div class="slide_smallbox slide_left">
                 <div class="black"></div>
                 <img id="imgs" img src="imgs/slide_before.png" height="520px" alt="no img">
                 <div class="word_box">
@@ -71,8 +117,8 @@
                 </div>
               </div>
 
-              <div class="slide_small top">
-                <img src="imgs/imgs/slides/1_1.png" width="100%" height="100%" alt="">
+              <div class="slide_smallbox slide_small top">
+                <img src="imgs/slides/1_1.png" width="100%" height="100%" alt="">
                 <div class="black">
                   <div class="text_box">
                     <div class="text_top">
@@ -85,7 +131,7 @@
                 </div>
               </div>
 
-              <div class="slide_small down">
+              <div class="slide_smallbox slide_small down">
                 <img src="imgs/slides/1_2.jpg" width="100%" height="100%" alt="">
                 <div class="black">
                   <div class="text_box">
@@ -101,7 +147,7 @@
             </div>
 
             <div class="slide_bigbox bigbox2">
-              <div class="slide_three">
+              <div class="slide_smallbox slide_three">
                 <img src="imgs/slides/2_1.jpeg" width="100%" height="100%" alt="">
                 <div class="black">
                   <div class="text_box">
@@ -117,7 +163,7 @@
                   </div>
                 </div>
               </div>
-              <div class="slide_three">
+              <div class="slide_smallbox slide_three">
                 <img src="imgs/slides/2_2.jpg" width="100%" height="100%" alt="">
                 <div class="black">
                   <div class="text_box">
@@ -133,7 +179,7 @@
                   </div>
                 </div>
               </div>
-              <div class="slide_three">
+              <div class="slide_smallbox slide_three">
                 <img src="imgs/slides/2_3.jpg" width="100%" height="100%" alt="">
                 <div class="black">
                   <div class="text_box">
@@ -152,7 +198,7 @@
             </div>
 
             <div class="slide_bigbox bigbox3">
-              <div class="slide_four topline">
+              <div class="slide_smallbox slide_four topline">
                 <img src="imgs/slides/3_1.png" width="100%" height="100%" alt="">
                 <div class="black">
                   <div class="text_box">
@@ -165,7 +211,7 @@
                   </div>
                 </div>
               </div>
-              <div class="slide_four">
+              <div class="slide_smallbox slide_four">
                 <img src="imgs/slides/3_2.jpg" width="100%" height="100%" alt="">
                 <div class="black">
                   <div class="text_box">
@@ -178,7 +224,7 @@
                   </div>
                 </div>
               </div>
-              <div class="slide_four downline">
+              <div class="slide_smallbox slide_four downline">
                 <img src="imgs/slides/3_3.jpg" width="100%" height="100%" alt="">
                 <div class="black">
                   <div class="text_box">
@@ -191,7 +237,7 @@
                   </div>
                 </div>
               </div>
-              <div class="slide_four">
+              <div class="slide_smallbox slide_four">
                 <img src="imgs/slides/3_4.jpg" width="100%" height="100%" alt="">
                 <div class="black">
                   <div class="text_box">
@@ -207,7 +253,7 @@
             </div>
 
             <div class="slide_bigbox bigbox4">
-              <div class="slide_left">
+              <div class="slide_smallbox slide_left">
                 <img src="imgs/slides/4_1.jpg" width="100%" height="100%" alt="">
                 <div class="black">
                   <div class="text_box">
@@ -223,7 +269,7 @@
                   </div>
                 </div>
               </div>
-              <div class="slide_small top">
+              <div class="slide_smallbox slide_small top">
                 <img src="imgs/slides/4_2.jpg" width="100%" height="100%" alt="">
                 <div class="black">
                   <div class="text_box">
@@ -236,7 +282,7 @@
                   </div>
                 </div>
               </div>
-              <div class="slide_small down">
+              <div class="slide_smallbox slide_small down">
                 <img src="imgs/slides/4_3.png" width="100%" height="100%" alt="">
                 <div class="black">
                   <div class="text_box">
@@ -252,7 +298,7 @@
             </div>
 
             <div class="slide_bigbox bigbox5">
-              <div class="slide_three">
+              <div class="slide_smallbox slide_three">
                 <img src="imgs/slides/5_1.png" width="100%" height="100%" alt="">
                 <div class="black">
                   <div class="text_box">
@@ -268,7 +314,7 @@
                   </div>
                 </div>
               </div>
-              <div class="slide_three">
+              <div class="slide_smallbox slide_three">
                 <img src="imgs/slides/5_2.png" width="100%" height="100%" alt="">
                 <div class="black">
                   <div class="text_box">
@@ -284,7 +330,7 @@
                   </div>
                 </div>
               </div>
-              <div class="slide_three">
+              <div class="slide_smallbox slide_three">
                 <img src="imgs/slides/5_3.png" width="100%" height="100%" alt="">
                 <div class="black">
                   <div class="text_box">
@@ -303,7 +349,7 @@
             </div>
 
             <div class="slide_bigbox bigbox6">
-              <div class="slide_squid topsquid">
+              <div class="slide_smallbox slide_squid topsquid">
                 <img src="imgs/slides/6_1.png" width="100%" height="100%" alt="">
                 <div class="black">
                   <div class="text_box">
@@ -319,7 +365,7 @@
                   </div>
                 </div>
               </div>
-              <div class="slide_squid downsquid">
+              <div class="slide_smallbox slide_squid downsquid">
                 <img src="imgs/slides/6_2.png" width="100%" height="100%" alt="">
                 <div class="black">
                   <div class="text_box">
@@ -332,7 +378,7 @@
                   </div>
                 </div>
               </div>
-              <div class="slide_squid downsquid">
+              <div class="slide_smallbox slide_squid downsquid">
                 <img src="imgs/slides/6_3.png" width="100%" height="100%" alt="">
                 <div class="black">
                   <div class="text_box">
@@ -345,7 +391,7 @@
                   </div>
                 </div>
               </div>
-              <div class="slide_squid downsquid">
+              <div class="slide_smallbox slide_squid downsquid">
                 <img src="imgs/slides/6_4.png" width="100%" height="100%" alt="">
                 <div class="black">
                   <div class="text_box">
@@ -361,7 +407,7 @@
             </div>
 
             <div class="slide_bigbox bigbox7">
-              <div class="slide_left">
+              <div class="slide_smallbox slide_left">
                 <img src="imgs/slides/7_1.png" width="100%" height="100%" alt="">
                 <div class="black">
                   <div class="text_box">
@@ -377,7 +423,7 @@
                   </div>
                 </div>
               </div>
-              <div class="slide_small top">
+              <div class="slide_smallbox slide_small top">
                 <img src="imgs/slides/7_2.png" width="100%" height="100%" alt="">
                 <div class="black">
                   <div class="text_box">
@@ -390,7 +436,7 @@
                   </div>
                 </div>
               </div>
-              <div class="slide_small down">
+              <div class="slide_smallbox slide_small down">
                 <img src="imgs/slides/7_3.jpg" width="100%" height="100%" alt="">
                 <div class="black">
                   <div class="text_box">
@@ -406,7 +452,7 @@
             </div>
 
             <div class="slide_bigbox bigbox8">
-              <div class="slide_three">
+              <div class="slide_smallbox slide_three">
                 <img src="imgs/slides/8_1.jpg" width="100%" height="100%" alt="">
                 <div class="black">
                   <div class="text_box">
@@ -422,7 +468,7 @@
                   </div>
                 </div>
               </div>
-              <div class="slide_three">
+              <div class="slide_smallbox slide_three">
                 <img src="imgs/slides/8_2.jpg" width="100%" height="100%" alt="">
                 <div class="black">
                   <div class="text_box">
@@ -438,7 +484,7 @@
                   </div>
                 </div>
               </div>
-              <div class="slide_three">
+              <div class="slide_smallbox slide_three">
                 <img src="imgs/slides/8_3.png" width="100%" height="100%" alt="">
                 <div class="black">
                   <div class="text_box">
@@ -457,7 +503,7 @@
             </div>
 
             <div class="slide_bigbox bigbox9">
-              <div class="slide_squid topsquid">
+              <div class="slide_smallbox slide_squid topsquid">
                 <img src="imgs/slides/9_1.png" width="100%" height="100%" alt="">
                 <div class="black">
                   <div class="text_box">
@@ -473,7 +519,7 @@
                   </div>
                 </div>
               </div>
-              <div class="slide_squid downsquid">
+              <div class="slide_smallbox slide_squid downsquid">
                 <img src="imgs/slides/9_2.png" width="100%" height="100%" alt="">
                 <div class="black">
                   <div class="text_box">
@@ -486,7 +532,7 @@
                   </div>
                 </div>
               </div>
-              <div class="slide_squid downsquid">
+              <div class="slide_smallbox slide_squid downsquid">
                 <img src="imgs/slides/9_3.jpg" width="100%" height="100%" alt="">
                 <div class="black">
                   <div class="text_box">
@@ -499,7 +545,7 @@
                   </div>
                 </div>
               </div>
-              <div class="slide_squid downsquid">
+              <div class="slide_smallbox slide_squid downsquid">
                 <img src="imgs/slides/9_4.jpg" width="100%" height="100%" alt="">
                 <div class="black">
                   <div class="text_box">
@@ -516,6 +562,7 @@
 
           </div>
         </div>
+
         <div id="left_bt">
           <img src="icon/left.svg" alt="left_bt" height="100" width="100">
         </div>
